name:                russell
version:             0.1.0.0
synopsis:            A word game
license:             CCBYNCSA
license-file:        LICENSE
author:              Dan Rosén, Malin Ahlberg
maintainer:          danr@student.chalmers.se, malin.ahlberg@gu.se
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable russell
  main-is:           Main.hs
  ghc-options:       -threaded -O2
  hs-source-dirs:    backend
  build-depends:
        base >=4.5
      , websockets >= 0.7.3
      , ghc-prim
      , transformers
      , containers
      , unordered-containers
      , MonadRandom
      , text
      , stm
      , time
      , word8
      , bytestring
      , aeson
      , scotty >= 0.4.6
      , wai-extra
      , wai-middleware-static
